kubernetes-orchestrations/opensearch/fluentd-daemonset.yml
#Adapted from: https://github.com/fluent/fluentd-kubernetes-daemonset/blob/master/fluentd-daemonset-opensearch.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: fluentd-daemonset
  labels:
    k8s-app: fluentd-logging
    version: v1
spec:
  selector:
    matchLabels:
      k8s-app: fluentd-logging
      version: v1
  template:
    metadata:
      labels:
        k8s-app: fluentd-logging
        version: v1
    spec:
      serviceAccountName: fluentd-daemonset
      tolerations:
      - key: node-role.kubernetes.io/control-plane
        effect: NoSchedule
      - key: node-role.kubernetes.io/master
        effect: NoSchedule
      containers:
      - name: fluentd-daemonset
        image: ferlabcrsj/fluentd-kubernetes-daemonset:c302d031e744ff59191c202da08703b4a9600036-1665965303
        resources:
          limits:
            memory: 500Mi
          requests:
            cpu: 200m
            memory: 500Mi
        volumeMounts:
          - name: opensearch-credentials
            mountPath: /opt/opensearch-credentials
          - name: varlog
            mountPath: /var/log
          - name: dockercontainerlogdirectory
            mountPath: /var/lib/docker/containers
            readOnly: true
      terminationGracePeriodSeconds: 30
      volumes:
        - name: opensearch-credentials
          configMap:
            name: opensearch-admin-credentials
            defaultMode: 0555
        - name: varlog
          hostPath:
            path: /var/log
        - name: dockercontainerlogdirectory
          hostPath:
            path: /var/lib/docker/containers
