kubernetes-orchestrations/opensearch/dashboard-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: opensearch-dashboard
spec:
  rules:
    - host: opensearch-dashboard.k8.ferlab.lan
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: opensearch-dashboard
                port:
                  number: 5601
